# self

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  RELEASE.md  contributing.md  helloWorld.cpp  qiproject.xml
etc/shared/: bootstrap.json  (+5 more)
lib/: CMakeLists.txt
scripts/: build.sh  build_mac.sh  clean.sh  download_dep.sh  install_sota.sh  package.sh  package_linux.sh  package_mac.sh  package_nao.sh  package_raspi.sh  package_sota.sh  profile_update.sh  stage.sh  stage_linux.sh  stage_mac.sh  stage_nao.sh  stage_raspi.sh  stage_sota.sh  tc_install.sh
src/: CMakeLists.txt  SelfInstance.cpp  SelfInstance.h  SelfLib.h  SelfMain.cpp  main.cpp
tests/: AgentTest.cpp  AgentTest.h  CMakeLists.txt  TestAsimovAgent.cpp  TestAttentionAgent.cpp  TestConfigTopic.cpp  TestDataStore.cpp  TestDisplayAgent.cpp  TestEmotionAgent.cpp  TestFeedbackAgent.cpp  TestGestureAgent.cpp  TestGoalAgent.cpp  TestGraph.cpp  TestGraphService.cpp  TestGreeterAgent.cpp  TestHealthAgent.cpp  TestMathAgent.cpp  TestMusicAgent.cpp  TestNameAgent.cpp  TestNewsAgent.cpp  TestPrivacyAgent.cpp  TestQuestionAgent.cpp  TestRandomInteractionAgent.cpp  TestReminderAgent.cpp  TestRequestAgent.cpp  TestRestGesture.cpp  TestSelfInstance.cpp  TestSkillTeachingAgent.cpp  TestSleepAgent.cpp  TestSpeakingAgent.cpp  TestSystem.cpp  TestTelephonyAgent.cpp  TestThinkingAgent.cpp  TestTimeAgent.cpp  TestTopicAgent.cpp  TestURLAgent.cpp  TestUpdateAgent.cpp  TestVisualTeachingAgent.cpp  TestWeatherAgent.cpp  TestWebRequestAgent.cpp  (+1 more)
tools/: CMakeLists.txt
vs2015/: self-android.sln  self.sln
(+662 files in other folders)
